[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "lycheelink-serv"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["serde-json", "tokio_rt"] }
napi-derive = "2"
tungstenite = "0.17.2"
tokio-tungstenite = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
retainer = "0.3"
alea = "0.2.2"
tokio = { version = "1", features = ["rt", "io-util"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

[target.'cfg(all(any(windows, unix), target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc = {version = "0.1"}

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
